Completed assignments till 7. Startin with 8th

--- a/1.ipynb
+++ b/1.ipynb
@@ -2,56 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def PoL(cp, sp):\n",
-    "    if (cp - sp < 0):\n",
-    "        # print(\"Loss of -> \")\n",
-    "        return abs(cp - sp)\n",
-    "    else:\n",
-    "        # print(\"Profit of -> \")\n",
-    "        return cp - sp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Percentage(cp, sp):\n",
-    "    amt = PoL(cp, sp)\n",
-    "    return (amt / cp) * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loss amount :  100.0\n",
-      "Loss Percentage :  50.0 %\n"
+      "1. Calculate Profit/Loss\n",
+      "2. Exit\n",
+      "Invalid input: Cost price cannot be zero: Amount: 0, Percentage: 0.00%\n",
+      "1. Calculate Profit/Loss\n",
+      "2. Exit\n",
+      "Loss: Amount: 2300.0, Percentage: 2300.00%\n",
+      "1. Calculate Profit/Loss\n",
+      "2. Exit\n",
+      "Profit: Amount: 100.0, Percentage: 100.00%\n",
+      "1. Calculate Profit/Loss\n",
+      "2. Exit\n"
      ]
     }
    ],
    "source": [
-    "cp = float(input(\"Enter the cost price : \"))\n",
-    "sp = float(input(\"Enter the selling price : \"))\n",
+    "def calculate_profit_loss(cp, sp):\n",
+    "    if cp == 0:\n",
+    "        return \"Invalid input: Cost price cannot be zero\", 0, 0\n",
     "\n",
-    "if (cp > sp):\n",
-    "    print(\"Loss amount : \", PoL(cp, sp))\n",
-    "    print(\"Loss Percentage : \", Percentage(cp, sp), \"%\")\n",
-    "elif (cp < sp):\n",
-    "    print(\"Profit amount : \", PoL(cp, sp))\n",
-    "    print(\"Profit Percentage : \", Percentage(cp, sp), \"%\")\n",
-    "else:\n",
-    "    print(\"No profit No Loss\")"
+    "    if cp > sp:\n",
+    "        return \"Loss\", cp - sp, ((cp - sp) / cp) * 100\n",
+    "    elif cp < sp:\n",
+    "        return \"Profit\", sp - cp, ((sp - cp) / cp) * 100\n",
+    "    else:\n",
+    "        return \"No profit No Loss\", 0, 0\n",
+    "\n",
+    "while True:\n",
+    "    print(\"1. Calculate Profit/Loss\")\n",
+    "    print(\"2. Exit\")\n",
+    "    choice = input(\"Enter your choice: \")\n",
+    "\n",
+    "    if choice == '1':\n",
+    "        try:\n",
+    "            cp = float(input(\"Enter the cost price: \"))\n",
+    "            sp = float(input(\"Enter the selling price: \"))\n",
+    "            result_type, amount, percentage = calculate_profit_loss(cp, sp)\n",
+    "            print(f\"{result_type}: Amount: {amount}, Percentage: {percentage:.2f}%\")\n",
+    "        except ValueError:\n",
+    "            print(\"Enter proper input (numeric values)!\")\n",
+    "    elif choice == '2':\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Invalid choice. Please select a valid option.\")"
    ]
   },
   {
