--- a/2.ipynb
+++ b/2.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def isPrime(number):\n",
+    "def is_prime(number):\n",
     "    if (number == 2):\n",
     "        return True\n",
     "    if (number % 2 == 0):\n",
@@ -19,23 +19,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 is not a prime number\n"
+      "1. Check if a number is prime\n",
+      "2. Exit\n",
+      "Invalid input: Number should be greater than 1\n",
+      "1. Check if a number is prime\n",
+      "2. Exit\n",
+      "Prime\n",
+      "1. Check if a number is prime\n",
+      "2. Exit\n",
+      "Invalid choice. Please select a valid option.\n",
+      "1. Check if a number is prime\n",
+      "2. Exit\n",
+      "Not prime\n",
+      "1. Check if a number is prime\n",
+      "2. Exit\n",
+      "Prime\n",
+      "1. Check if a number is prime\n",
+      "2. Exit\n"
      ]
     }
    ],
    "source": [
-    "number = int(input(\"Enter the number : \"))\n",
-    "if (isPrime(number)):\n",
-    "    print(number, \"is a Prime number\")\n",
-    "else:\n",
-    "    print(number, \"is not a prime number\")"
+    "def check_prime(number):\n",
+    "    if number <= 1:\n",
+    "        return \"Invalid input: Number should be greater than 1\"\n",
+    "    return \"Prime\" if is_prime(number) else \"Not prime\"\n",
+    "\n",
+    "while True:\n",
+    "    print(\"1. Check if a number is prime\")\n",
+    "    print(\"2. Exit\")\n",
+    "    choice = input(\"Enter your choice: \")\n",
+    "\n",
+    "    if choice == '1':\n",
+    "        try:\n",
+    "            number = int(input(\"Enter the number: \"))\n",
+    "            result = check_prime(number)\n",
+    "            print(result)\n",
+    "        except ValueError:\n",
+    "            print(\"Input format not correct! Please enter a valid integer.\")\n",
+    "    elif choice == '2':\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Invalid choice. Please select a valid option.\")"
    ]
   },
   {
