--- a/3.ipynb
+++ b/3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,23 +15,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 is Even\n"
+      "12389120398120938102938 is Even\n"
      ]
     }
    ],
    "source": [
-    "number = int(input(\"Enter the number : \"))\n",
-    "if(isEven(number)):\n",
-    "    print(number, \"is Even\")\n",
-    "else:\n",
-    "    print(number, \"is Odd\")"
+    "try:\n",
+    "    number = int(input(\"Enter the number : \"))\n",
+    "    if(isEven(number)):\n",
+    "        print(number, \"is Even\")\n",
+    "    else:\n",
+    "        print(number, \"is Odd\")\n",
+    "except ValueError:\n",
+    "    print(\"Enter the input in proper format !\")\n",
+    "except Exception as e:\n",
+    "    print(\"An error occurred:\", str(e))"
    ]
   },
   {
