--- a/4.ipynb
+++ b/4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,23 +21,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Area ->  314.1592653589793\n",
-      "Circumference ->  62.83185307179586\n"
+      "1. Calculate Area and Circumference\n",
+      "2. Exit\n",
+      "Area -> 314.1592653589793\n",
+      "Circumference -> 62.83185307179586\n",
+      "1. Calculate Area and Circumference\n",
+      "2. Exit\n",
+      "Radius must be a positive number.\n",
+      "1. Calculate Area and Circumference\n",
+      "2. Exit\n",
+      "Invalid choice. Please select a valid option.\n",
+      "1. Calculate Area and Circumference\n",
+      "2. Exit\n",
+      "Invalid choice. Please select a valid option.\n",
+      "1. Calculate Area and Circumference\n",
+      "2. Exit\n",
+      "Input format not correct! Please enter a valid number.\n",
+      "1. Calculate Area and Circumference\n",
+      "2. Exit\n",
+      "Invalid choice. Please select a valid option.\n",
+      "1. Calculate Area and Circumference\n",
+      "2. Exit\n"
      ]
     }
    ],
    "source": [
-    "radius = float(input(\"Enter the radius : \"))\n",
-    "area, cir = areaAndCircum(radius)\n",
-    "print(\"Area -> \", area)\n",
-    "print(\"Circumference -> \", cir)"
+    "while True:\n",
+    "    print(\"1. Calculate Area and Circumference\")\n",
+    "    print(\"2. Exit\")\n",
+    "    choice = input(\"Enter your choice: \")\n",
+    "\n",
+    "    if choice == '1':\n",
+    "        try:\n",
+    "            radius = float(input(\"Enter the radius: \"))\n",
+    "            if radius <= 0:\n",
+    "                print(\"Radius must be a positive number.\")\n",
+    "            else:\n",
+    "                area, circumference = areaAndCircum(radius)\n",
+    "                print(\"Area ->\", area)\n",
+    "                print(\"Circumference ->\", circumference)\n",
+    "        except ValueError:\n",
+    "            print(\"Input format not correct! Please enter a valid number.\")\n",
+    "    elif choice == '2':\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Invalid choice. Please select a valid option.\")"
    ]
   },
   {
