--- a/5.ipynb
+++ b/5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,27 +25,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the marks for each subject \n",
-      "\n",
-      "i-division\n"
+      "Menu:\n",
+      "1. Calculate Division\n",
+      "2. Exit\n",
+      "Enter the marks for each subject:\n",
+      "Result: iv-division\n",
+      "Menu:\n",
+      "1. Calculate Division\n",
+      "2. Exit\n"
      ]
     }
    ],
    "source": [
-    "i = int(input(\"Enter the no.of subjects : \"))\n",
-    "print(\"Enter the marks for each subject \\n\")\n",
-    "marks = []\n",
-    "for f in range(i):\n",
-    "    marks.append(float(input(\"Enter marks : \")))\n",
     "\n",
-    "print(displayResult(marks))"
+    "try:\n",
+    "    while True:\n",
+    "        print(\"Menu:\")\n",
+    "        print(\"1. Calculate Division\")\n",
+    "        print(\"2. Exit\")\n",
+    "            \n",
+    "        choice = int(input(\"Enter your choice: \"))\n",
+    "            \n",
+    "        if choice == 1:\n",
+    "            i = int(input(\"Enter the number of subjects: \"))\n",
+    "            print(\"Enter the marks for each subject:\")\n",
+    "            marks = []\n",
+    "            for _ in range(i):\n",
+    "                marks.append(float(input(\"Enter marks: \")))\n",
+    "            \n",
+    "            result = displayResult(marks)\n",
+    "            print(\"Result:\", result)\n",
+    "        elif choice == 2:\n",
+    "            break\n",
+    "        else:\n",
+    "            print(\"Invalid choice. Please select a valid option.\")\n",
+    "except ValueError:\n",
+    "    print(\"Input format is not correct! Please enter valid input.\")\n",
+    "except Exception as e:\n",
+    "    print(\"An error occurred:\", str(e))"
    ]
   },
   {
