Completed all the questions !

--- a/3.ipynb
+++ b/3.ipynb
@@ -22,22 +22,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12389120398120938102938 is Even\n"
+      "Enter the input in proper format !\n",
+      "Enter the input in proper format !\n",
+      "-11 is Odd\n"
      ]
     }
    ],
    "source": [
-    "try:\n",
-    "    number = int(input(\"Enter the number : \"))\n",
-    "    if(isEven(number)):\n",
-    "        print(number, \"is Even\")\n",
-    "    else:\n",
-    "        print(number, \"is Odd\")\n",
-    "except ValueError:\n",
-    "    print(\"Enter the input in proper format !\")\n",
-    "except Exception as e:\n",
-    "    print(\"An error occurred:\", str(e))"
+    "while True:\n",
+    "    try:\n",
+    "        x = int(input(\"Do you want to enter another number?(1-y / 0-no)\"))\n",
+    "        if (x == 1):\n",
+    "            number = int(input(\"Enter the number : \"))\n",
+    "            if(isEven(number)):\n",
+    "                print(number, \"is Even\")\n",
+    "            else:\n",
+    "                print(number, \"is Odd\")\n",
+    "        else:\n",
+    "            break\n",
+    "    except ValueError:\n",
+    "        print(\"Enter the input in proper format !\")\n",
+    "    except Exception as e:\n",
+    "        print(\"An error occurred:\", str(e))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
