--- a/7.ipynb
+++ b/7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,12 +32,17 @@
       "Menu:\n",
       "1. Find the largest number\n",
       "2. Quit\n",
-      "Largest number is: 11\n",
+      "Invalid choice. Please select a valid option.\n",
       "\n",
       "Menu:\n",
       "1. Find the largest number\n",
       "2. Quit\n",
-      "Invalid choice. Please select a valid option.\n",
+      "Input not in proper format. Please enter valid numbers.\n",
+      "\n",
+      "Menu:\n",
+      "1. Find the largest number\n",
+      "2. Quit\n",
+      "Largest number is: 12.0\n",
       "\n",
       "Menu:\n",
       "1. Find the largest number\n",
@@ -63,9 +68,9 @@
     "        continue\n",
     "\n",
     "    try:\n",
-    "        num1 = int(input(\"Enter 1st number: \"))\n",
-    "        num2 = int(input(\"Enter 2nd number: \"))\n",
-    "        num3 = int(input(\"Enter 3rd number: \"))\n",
+    "        num1 = float(input(\"Enter 1st number: \"))\n",
+    "        num2 = float(input(\"Enter 2nd number: \"))\n",
+    "        num3 = float(input(\"Enter 3rd number: \"))\n",
     "\n",
     "        largest_number = largest(num1, num2, num3)\n",
     "        print(\"Largest number is:\", largest_number)\n",
