--- a/6.ipynb
+++ b/6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,21 +17,24 @@
     "        if (op2 != 0):\n",
     "            return op1 / op2\n",
     "        else:\n",
-    "            print(\"Division by zero error !\")"
+    "            print(\"Division by zero error !\")\n",
+    "    else:\n",
+    "        print(\"No valid operation entered :(\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enter proper input !\n",
       "Input not in proper format!\n",
-      "Result: 26.0\n",
-      "Input not in proper format!\n"
+      "Enter proper operator !\n",
+      "Result: 87.0\n"
      ]
     }
    ],
@@ -40,20 +43,26 @@
     "    choice = input(\"1 - Want to perform operation, 2 - Quit\")\n",
     "    if (choice == '2'):\n",
     "        break\n",
-    "    try:\n",
-    "        op1 = float(input(\"Operand 1: \"))\n",
-    "        op = input(\"Operator: \")\n",
-    "        op2 = float(input(\"Operand 2: \"))\n",
+    "    if (choice == '1'):\n",
+    "        try:\n",
+    "            op1 = float(input(\"Operand 1: \"))\n",
+    "            op = input(\"Operator: \")\n",
+    "            while op not in ['+', '-', '/', '*']:\n",
+    "                print(\"Enter proper operator !\")\n",
+    "                op = input(\"Operator: \")\n",
+    "            op2 = float(input(\"Operand 2: \"))\n",
     "\n",
-    "        result = perform(op1, op, op2)\n",
-    "        if isinstance(result, str):\n",
-    "            print(result)\n",
-    "        else:\n",
-    "            print(\"Result:\", result)\n",
-    "    except ValueError:\n",
-    "        print(\"Input not in proper format!\")\n",
-    "    except Exception as e:\n",
-    "        print(\"An error occurred:\", str(e))"
+    "            result = perform(op1, op, op2)\n",
+    "            if isinstance(result, str):\n",
+    "                print(result)\n",
+    "            else:\n",
+    "                print(\"Result:\", result)\n",
+    "        except ValueError:\n",
+    "            print(\"Input not in proper format!\")\n",
+    "        except Exception as e:\n",
+    "            print(\"An error occurred:\", str(e))\n",
+    "    else:\n",
+    "        print(\"Enter proper input !\")"
    ]
   },
   {
