--- a/3.ipynb
+++ b/3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the input in proper format !\n",
-      "Enter the input in proper format !\n",
-      "-11 is Odd\n"
+      "Enter the input in proper format !\n"
      ]
     }
    ],
