--- a/17.ipynb
+++ b/17.ipynb
@@ -2,13 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Cat\n",
+      "dog\n",
+      "bear\n",
+      "hello\n",
+      "elephant\n",
+      "hello\n",
+      "tiger\n",
+      "hello\n",
+      "horse\n",
+      "\n",
       "Modified File Contents:\n",
       "Cat\n",
       "dog\n",
@@ -23,6 +33,9 @@
     "try:\n",
     "    with open('animals.txt', 'w') as file:\n",
     "        file.write(\"Cat\\ndog\\nbear\\nhello\\nelephant\\nhello\\ntiger\\nhello\\nhorse\\n\")\n",
+    "    \n",
+    "    with open('animals.txt', 'r') as file:\n",
+    "        print(file.read())\n",
     "\n",
     "    with open('animals.txt', 'r') as input_file, open('modified_animals.txt', 'w') as output_file:\n",
     "        for line in input_file:\n",
