--- a/2.ipynb
+++ b/2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -28,16 +28,7 @@
      "text": [
       "1. Check if a number is prime\n",
       "2. Exit\n",
-      "Enter proper value !\n",
-      "1. Check if a number is prime\n",
-      "2. Exit\n",
-      "Enter proper value !\n",
-      "1. Check if a number is prime\n",
-      "2. Exit\n",
-      "23 is a Prime Number\n",
-      "1. Check if a number is prime\n",
-      "2. Exit\n",
-      "4 is not a Prime Number\n",
+      "1 is neither prime nor composite\n",
       "1. Check if a number is prime\n",
       "2. Exit\n"
      ]
@@ -61,6 +52,9 @@
     "        if choice == 1:\n",
     "#             try:\n",
     "            number = int(input(\"Enter the number: \"))\n",
+    "            if (number == 1) or (number == 0):\n",
+    "                print(f\"{number} is neither prime nor composite\")\n",
+    "                continue\n",
     "            result, num = check_prime(number)\n",
     "            if (num == 1):\n",
     "                print(result)\n",
