--- a/4.ipynb
+++ b/4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -30,17 +30,7 @@
      "text": [
       "1. Calculate Area and Circumference\n",
       "2. Exit\n",
-      "Invalid choice. Please select a valid option.\n",
-      "1. Calculate Area and Circumference\n",
-      "2. Exit\n",
-      "Invalid choice. Please select a valid option.\n",
-      "1. Calculate Area and Circumference\n",
-      "2. Exit\n",
-      "Input format not correct! Please enter a valid number.\n",
-      "1. Calculate Area and Circumference\n",
-      "2. Exit\n",
-      "Area -> 314.1592653589793\n",
-      "Circumference -> 62.83185307179586\n",
+      "Radius must be a positive number.\n",
       "1. Calculate Area and Circumference\n",
       "2. Exit\n"
      ]
