--- a/8.ipynb
+++ b/8.ipynb
@@ -2,20 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invalid input for the number of subjects. Please enter a valid integer.\n",
-      "Invalid input for marks. Please enter a valid number.\n",
       "\n",
       "Student\tDivision\n",
-      "pp\ti-division\n",
-      "oo\tii-division\n",
-      "ii\tiii-division\n"
+      "s1\ti-division\n",
+      "s2\tii-division\n"
      ]
     }
    ],
