--- a/13.ipynb
+++ b/13.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -13,22 +13,17 @@
       "Palindrome Checker Menu:\n",
       "1. Check if a string is a palindrome\n",
       "2. Quit\n",
-      "Invalid choice. Please select a valid option (1/2).\n",
-      "\n",
-      "Palindrome Checker Menu:\n",
-      "1. Check if a string is a palindrome\n",
-      "2. Quit\n",
       "'123321' is a palindrome.\n",
       "\n",
       "Palindrome Checker Menu:\n",
       "1. Check if a string is a palindrome\n",
       "2. Quit\n",
-      "'12321' is a palindrome.\n",
+      "Invalid choice. Please select a valid option (1/2).\n",
       "\n",
       "Palindrome Checker Menu:\n",
       "1. Check if a string is a palindrome\n",
       "2. Quit\n",
-      "'----' is a palindrome.\n",
+      "'yuiop' is not a palindrome.\n",
       "\n",
       "Palindrome Checker Menu:\n",
       "1. Check if a string is a palindrome\n",
